Sclaed and added dummies for categorical columns for dataset

--- a/RandomForest_Covid_Case_Study_06302020/RandomForest_casestudy_covid19.ipynb
+++ b/RandomForest_Covid_Case_Study_06302020/RandomForest_casestudy_covid19.ipynb
@@ -2317,11 +2317,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 131,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>global_num</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>disease</th>\n",
+       "      <th>infection_order</th>\n",
+       "      <th>infected_by</th>\n",
+       "      <th>contact_number</th>\n",
+       "      <th>n_age</th>\n",
+       "      <th>sex_0.0</th>\n",
+       "      <th>sex_female</th>\n",
+       "      <th>...</th>\n",
+       "      <th>infection_case_Suyeong-gu Kindergarten</th>\n",
+       "      <th>infection_case_contact with patient</th>\n",
+       "      <th>infection_case_etc</th>\n",
+       "      <th>infection_case_gym facility in Cheonan</th>\n",
+       "      <th>infection_case_gym facility in Sejong</th>\n",
+       "      <th>infection_case_overseas inflow</th>\n",
+       "      <th>state_0.0</th>\n",
+       "      <th>state_deceased</th>\n",
+       "      <th>state_isolated</th>\n",
+       "      <th>state_released</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000000002</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1987.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000003</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1964.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.002000e+09</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000000004</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1991.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.600789e+09</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000000005</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.000000e+09</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 200 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   patient_id  global_num  birth_year  disease  infection_order   infected_by  \\\n",
+       "0  1000000001         2.0      1964.0      0.0              1.0  2.600789e+09   \n",
+       "1  1000000002         5.0      1987.0      0.0              1.0  2.600789e+09   \n",
+       "2  1000000003         6.0      1964.0      0.0              2.0  2.002000e+09   \n",
+       "3  1000000004         7.0      1991.0      0.0              1.0  2.600789e+09   \n",
+       "4  1000000005         9.0      1992.0      0.0              2.0  1.000000e+09   \n",
+       "\n",
+       "   contact_number  n_age  sex_0.0  sex_female  ...  \\\n",
+       "0            75.0   59.0        0           0  ...   \n",
+       "1            31.0   36.0        0           0  ...   \n",
+       "2            17.0   59.0        0           0  ...   \n",
+       "3             9.0   32.0        0           0  ...   \n",
+       "4             2.0   31.0        0           1  ...   \n",
+       "\n",
+       "   infection_case_Suyeong-gu Kindergarten  \\\n",
+       "0                                       0   \n",
+       "1                                       0   \n",
+       "2                                       0   \n",
+       "3                                       0   \n",
+       "4                                       0   \n",
+       "\n",
+       "   infection_case_contact with patient  infection_case_etc  \\\n",
+       "0                                    0                   0   \n",
+       "1                                    0                   0   \n",
+       "2                                    1                   0   \n",
+       "3                                    0                   0   \n",
+       "4                                    1                   0   \n",
+       "\n",
+       "   infection_case_gym facility in Cheonan  \\\n",
+       "0                                       0   \n",
+       "1                                       0   \n",
+       "2                                       0   \n",
+       "3                                       0   \n",
+       "4                                       0   \n",
+       "\n",
+       "   infection_case_gym facility in Sejong  infection_case_overseas inflow  \\\n",
+       "0                                      0                               1   \n",
+       "1                                      0                               1   \n",
+       "2                                      0                               0   \n",
+       "3                                      0                               1   \n",
+       "4                                      0                               0   \n",
+       "\n",
+       "   state_0.0  state_deceased  state_isolated  state_released  \n",
+       "0          0               0               0               1  \n",
+       "1          0               0               0               1  \n",
+       "2          0               0               0               1  \n",
+       "3          0               0               0               1  \n",
+       "4          0               0               0               1  \n",
+       "\n",
+       "[5 rows x 200 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.get_dummies(df)"
+    "df_dummy = pd.get_dummies(df)\n",
+    "df_dummy.head()"
    ]
   },
   {
@@ -2336,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2347,6 +2578,8 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# dont forget to define your X and y\n",
+    "X = df_dummy.drop(columns = ['state_deceased', 'state_isolated', 'state_released', 'state_0.0'])\n",
+    "y=df_dummy[['state_deceased', 'state_isolated', 'state_released']]\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=1)"
    ]
@@ -2363,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2382,7 +2615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {
     "colab": {},
     "colab_type": "code",
